// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PacketTrackingItem should render correctly a delivered object 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingRight": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "minWidth": 64,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          12:01
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          5 Jan
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingRight": 4,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#6200ee",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {},
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            style={
              Array [
                Object {
                  "color": "#01417F",
                  "fontSize": 28.799999999999997,
                },
                Array [
                  Object {
                    "transform": Array [
                      Object {
                        "scaleX": 1,
                      },
                    ],
                  },
                  Object {
                    "backgroundColor": "transparent",
                  },
                ],
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={Object {}}
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
                Object {
                  "fontWeight": "bold",
                },
              ],
            ]
          }
        >
          Objeto entregue ao destinatário
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          De: 
          CTCE CURITIBA - Curitiba / PR
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#141414",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "color": undefined,
                  },
                  Object {
                    "paddingLeft": 4,
                  },
                ],
              ]
            }
          >
            Curitiba / PR
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PacketTrackingItem should render correctly a posted status 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingRight": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "minWidth": 64,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          12:01
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          5 Jan
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingRight": 4,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#6200ee",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {},
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            style={
              Array [
                Object {
                  "color": "#01417F",
                  "fontSize": 28.799999999999997,
                },
                Array [
                  Object {
                    "transform": Array [
                      Object {
                        "scaleX": 1,
                      },
                    ],
                  },
                  Object {
                    "backgroundColor": "transparent",
                  },
                ],
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={Object {}}
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
                Object {
                  "fontWeight": "bold",
                },
              ],
            ]
          }
        >
          Objeto postado após o horário limite da unidade
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          De: 
          CTCE CURITIBA - Curitiba / PR
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#141414",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "color": undefined,
                  },
                  Object {
                    "paddingLeft": 4,
                  },
                ],
              ]
            }
          >
            Curitiba / PR
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PacketTrackingItem should render correctly an on course object 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingRight": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "minWidth": 64,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          12:01
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          5 Jan
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingRight": 4,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#6200ee",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {},
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            style={
              Array [
                Object {
                  "color": "#01417F",
                  "fontSize": 28.799999999999997,
                },
                Array [
                  Object {
                    "transform": Array [
                      Object {
                        "scaleX": 1,
                      },
                    ],
                  },
                  Object {
                    "backgroundColor": "transparent",
                  },
                ],
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={Object {}}
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
                Object {
                  "fontWeight": "bold",
                },
              ],
            ]
          }
        >
          Objeto encaminhado
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          De: 
          AC ASSIS CHATEAUBRIAND - Assis Chateaubriand / PR
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "color": undefined,
                },
                Object {
                  "paddingLeft": 4,
                },
              ],
            ]
          }
        >
          Para: 
          CTCE CURITIBA - Curitiba / PR
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#141414",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "color": undefined,
                  },
                  Object {
                    "paddingLeft": 4,
                  },
                ],
              ]
            }
          >
            Assis Chateaubriand / PR
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
